syntax = "proto3";

package protodb.wasm;

import "google/protobuf/descriptor.proto";

message RunModuleRequest {
    string database = 1;
    string name = 2;
}

message RunModuleResponse {
    enum ErrorCode {
        NO_ERROR = 0;
        INTERNAL_ERROR = 1;
        INVALID_DATABASE = 2;
        INVALID_MODULE = 3;
    }
    ErrorCode error_code = 1;

    bytes result = 2;
}